--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
     <div data-role="page">
         <!-- Header -->
         <div data-role="header">
-            <a href="#pnlSiteMenu" data-role="button" data-icon="home" data-iconpos="notext"></a>
+            <a href="#pnlSiteMenu" data-role="button" data-icon="bars">Menu</a>
             <h1>eGate Solutions TS4</h1>
         </div>
 
         <!-- Content/Body -->
         <div data-role="content" id="MainContent">
             <img id="CompanyLogo" src="./imgs/eGate.png" alt="" width="266" height="165" />
+            <nav>
+                <ul>
+                    <li><a href="barsetopen.html" rel="external" data-ajax="false"><img src="./imgs/clear.gif" class="sprite-tasks" alt="" width="48" height="48" />Barset</a></li>
+                    <li><a href="flightopen.html" rel="external" data-ajax="false"><img src="./imgs/clear.gif" class="sprite-plane" alt="" width="48" height="48" />Flight</a></li>
+                    <li><a href="flightlogin.html" data-ajax="false" data-rel="external"><img src="./imgs/clear.gif" class="sprite-keys" alt="" width="48" height="48" />Login</a></li>
+                    <li><a href="shoppingcart.html" data-ajax="false" data-rel="external"><img src="./imgs/clear.gif" class="sprite-dollar" alt="" width="48" height="48" />Sales</a></li>
+                    <li><a href="#pnlReports"><img src="./imgs/clear.gif" class="sprite-chart" alt="" width="48" height="48" />Reports</a></li>
+                    <li><a href="syncdevices.html" rel="external"><img src="./imgs/clear.gif" class="sprite-sync" alt="" width="48" height="48" />Sync</a></li>
+                    <li><a href="catering.html" rel="external"><img src="./imgs/clear.gif" class="sprite-truck" alt="" width="48" height="48" />Catering</a></li>
+                    <li><a href="#pnlSettings"><img src="./imgs/clear.gif" class="sprite-tools" alt="" width="48" height="48" />Utilities</a></li>
+                    <li><a href="uplift.html" data-ajax="false" rel="external"><img src="./imgs/clear.gif" class="sprite-forklift" alt="" width="48" height="48" />Uplift</a></li>
+                </ul>
+            </nav>
         </div>
 
         <!-- Footer -->
